--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,20 +9,22 @@ include = [
 ]
 
 [[bin]]
-name = "transg"
+name = "transgression"
 path = "src/main.rs"
 
+[profile.dev]
+debug = false
 
 
 [dependencies]
 gtk = { version = "0.4.7", package = "gtk4", features = ["v4_4"]}
 once_cell = "1.5"
-transmission-rpc = { path = "../transmission-rpc" }
-#transmission-rpc = "0.3.6"
 tokio = { version = "1.18.0", features = ["full"]}
 reqwest = { version = "0.11.10", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = "0.2"
+lazy_static = "1.4.0"
 
 
 
