--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ serde_json = "1.0"
 chrono = "0.2"
 lazy_static = "1.4.0"
 
+[build-dependencies]
+gtk = { version = "0.4.7", package = "gtk4" }
+
 
 
 [dev-dependencies]
