--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,12 @@ include = [
 name = "transgression"
 path = "src/main.rs"
 
+[[bin]]
+name = "transgression-open-magnet"
+path = "src/magnet_open.rs"
+
 [profile.dev]
 debug = false
-
 
 [dependencies]
 gtk = { version = "0.4.7", package = "gtk4", features = ["v4_4"]}
@@ -25,6 +28,15 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.2"
 lazy_static = "1.4.0"
+async-std = "1.11"
+libtorrent-sys = { path = "../libtorrent-sys" }
+base64 = "0.13.0"
+lava_torrent = "0.7.0"
+tempdir = "*"
+magnet-url = "2.0.0"
+urlencoding = "2.1.0"
+zbus = "2.2.0"
+#transmission = "0.3.1"
 
 [build-dependencies]
 gtk = { version = "0.4.7", package = "gtk4" }
