--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ tempdir = "*"
 magnet-url = "2.0.0"
 urlencoding = "2.1.0"
 zbus = "2.2.0"
+home = "0.5.3"
 #transmission = "0.3.1"
 
 [build-dependencies]
