--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ serde_json = "1.0"
 chrono = "0.2"
 lazy_static = "1.4.0"
 async-std = "1.11"
-libtorrent-sys = { path = "../libtorrent-sys" }
+libtorrent-sys = { path = "./libtorrent-sys" } # need to use patched version for now
 base64 = "0.13.0"
 lava_torrent = "0.7.0"
 tempdir = "*"
