--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,9 @@ magnet-url = "2.0.0"
 urlencoding = "2.1.0"
 zbus = "2.2.0"
 home = "0.5.3"
+bit-vec = "0.6.3"
+#adw = {package = "libadwaita", version = "0.2.0-alpha.1", features = ["v1_1"]}
+procfs = "0.13.0"
 #transmission = "0.3.1"
 
 [build-dependencies]
