--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libtorrent-sys"]
 	path = libtorrent-sys
-	url = git@github.com:PanAeon/libtorrent-sys.git
+	url = https://github.com/PanAeon/transg.git
